--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>江江酱酱（装修中）</title>
+    <title>江江大佬（装修中）</title>
     <link rel="stylesheet" href="/src/index.scss" />
   </head>
   <body>
